[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/SettingsMenu/SoundSliders.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/UI/UI button click.wav" type="AudioStream" id=2]

[node name="SoundSliders" type="HBoxContainer"]
margin_right = 490.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 100.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 0
text = "Label"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 120.0
margin_right = 420.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 16 )
size_flags_horizontal = 3
min_value = -25.0
max_value = 25.0
script = ExtResource( 1 )

[node name="LineEdit" type="SpinBox" parent="."]
margin_left = 440.0
margin_right = 514.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 12 )
size_flags_vertical = 0
min_value = -25.0
max_value = 25.0
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="LineEdit" to="HSlider" method="_on_LineEdit_value_changed"]
